# rust-axum-todo-backend

./: Cargo.toml  README.org  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/helper/: header_extract.rs  mod.rs  res_con.rs
api/src/router/: rounter.rs
api/src/routes/: mod.rs  table.rs  task.rs  tasks.rs  user.rs
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/helper/: bad_request.rs  header_extract.rs
backend/api/src/router/: mod.rs  rounter.rs
backend/api/src/routes/: login.rs  mod.rs  register.rs  table.rs  tasks.rs  user.rs
backend/common/src/: lib.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs
backend/core/src/actions/: mod.rs
backend/core/src/actions/entity_actions/: deletion.rs  get.rs  insert.rs  mod.rs  save.rs
backend/core/src/actions/table_actions/: check.rs  clear.rs  creation.rs
backend/core/src/connections/: connections.rs
backend/core/src/entity/: tasks.rs  user.rs
backend/core/src/table_actions/: clear.rs  creation.rs  deletion.rs  insert.rs  mod.rs
backend/data/: Cargo.toml  docker-compose.yml
backend/data/database/: init.sql
backend/data/src/: lib.rs  main.rs
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: lib.rs
backend/src/api/: login.rs  server_working.rs
backend/src/middleware/: message.rs
backend/src/routes/: mod.rs
common/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/actions/entity_actions/: deletion.rs  get.rs  update.rs
core/src/actions/table_actions/: drop.rs
core/src/connections/: connections.rs
core/src/entity/: mod.rs  tasks.rs  user.rs
database/: Cargo.toml
database/src/: connections.rs  lib.rs
database/src/actions/: mod.rs
database/src/actions/entity_actions/: deletion.rs  get.rs  insert.rs  mod.rs  update.rs
database/src/actions/table_actions/: creation.rs  mod.rs
database/src/entity/: mod.rs  task.rs  user.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/components/atoms/: Box.svelte  Darktoggle.svelte  Input.svelte
frontend/src/lib/components/organisms/: Navbar.svelte  Register.svelte  signIn.svelte
frontend/src/lib/stores/: themes.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/Register/: +page.svelte
frontend/src/routes/signIn/: +page.svelte
src/: main.rs
