[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
core = { path = "../core" }
serde = "1.0.152"
serde_json = "1.0.91"
lazy_static = "1.4.0"
regex = "1.7.1"
tower-http = { version = "0.3.5", features = ["cors"] }
