[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.10.6", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "sqlx-mysql"] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = "1.0.152"
serde_json = "1.0.91"
axum = "0.6.2"
