[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
core = { path = "../core" }
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
